# same-te-mail-club

./: .dockerignore  .env.example  .gitignore  .manifestos.yaml  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Dockerfile  README.md  bacon.toml  docker-compose.yml  i18n.json  justfile
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yml
.sqlx/: query-002376e83484b17c9b971e67b486c530b246e7d4827aee9f0c68c62a1836e1a7.json  query-04e549487b313f8d1a31073ef38d6252c827a217823a672d969aab96224057ae.json  query-0890a2d3adc1ff845d5c95374702789e419b46151f5003b0fe828026784d5799.json  query-0c8113ecd5d790749481f9142834063081d5f2958d16cce11b3d919aabebe6af.json  query-0fac96bcec540e63476929fe798443ae50b90af5d6bb3f3c6cd522aa6c517429.json  query-109cf3d45863ea0170d6e527d7b622cfe82c1ce561f60cd8370a1462f5cee7e4.json  query-130baab521b6dc1dbb984a3543d9e3e2d5e713936e6d91c96b0b50ccb208caba.json  query-151575647ee4410ae6837bdcbb96749d211d2a4b8e1a7a6d6429943e58ab5d25.json  query-15c79278bd8cd733ea5ac78ab9ca6ed6389a4f857fcdfbb239fc6a0c34b6e6d3.json  query-1695a959d24d2382627aa2e5f36a448833ad52d7c7e04d9d75bbe794b486ffec.json  query-18864d82df4d4e36048c99048c1c340941aedea047e9342411f83cd5a8b0a7b8.json  query-198a8e06142c19d00148fe76b9def15ee56ae3dc732141c40e71c39081e917f8.json  query-1a3a0865b07c47032b227bfd08aa6ba3476b611800ee08f48be4463032178f44.json  query-1cac91d368427a12633b25163e32f5af13abb360341d813bf07d87918761a964.json  query-1ebaf78e3fbad3f480acb64c20e89964aba3bd7b28c8dd455d23125e79d47341.json  query-1f8ef9ac78a862d4ab8b66d994655f9c76eb6075535b90e3021a3cd6ab068a7c.json  query-20e34cd1f27e6a8da7027129d16a4a437a01a7b686194bf29384402e83b56835.json  query-220e31f806a858cf845ba40866182676128f05d0656c6e5c5e1ecd9ac3658e38.json  query-2387817cd3540048af8dde97b907e9ff432adb396d2b77a02c4b4d502f2c86c0.json  query-256b866e31337dfde3fe76b6675c2c622058d092e91a7fda9589587c1ebe6c43.json  query-28fc09d428dc1c82f436592f16681865b07c8e1a3984e11fd4938e897df08c5b.json  query-2b44c563f2e6dfdd1ddf55dec3772e1b06b15b25de76b0734437e8ed5133643b.json  query-39d48445e2070dacbef791608ae68d07e108e77f96ed14fb794850fd8715cee1.json  query-3a1e3bfaaf76c42cae88a2f0fa64ac9b7502c0bf3e6da6da393959a620498fd5.json  query-3c5bef635c001143aeb6951b9116984f5e6dc1ad6ac7cb75a37188d2ea3732ca.json  query-4282371fb3969f0e262db87c6054028d12e0b3fef49de254da1d5f0cd37c0fc5.json  query-4636907f99b87198e473f590f3aaaa318f77697d67b492d8f8d7a8fb98c126dc.json  query-47e5169fd6057f5b1bf1bb4503cb860ca9e88e6d9d5d5e6b1d19d56e74f2e97e.json  query-497c823bc6b75fc530095268564e5ef4580a9c14e844f7ef16755d9b7b2e1372.json  query-49ba34df9e9e89721c1b9b61f21a90d545b96deb67edcfa7926b33de190a8bbb.json  query-4dc3d54d5349c5613c2433616404fd8715f02067a92ff95dcfbd2245e2f108a5.json  query-4efbe04344f8870d99f3d510477594d329577f3963ed7d2dd3f30308a2cfb195.json  query-5144d4b855f11a5981b75398bc647356b71c33e90d9321ebcec968cdb6bb1907.json  query-52a6f319e716dcd144aabf81f9d3cf5a216059c1882b0250a671d3bb6cc49394.json  query-55661925814a3f3479ab98ac0097835cb53d745f6c3963cbc43545c241158416.json  query-577bbca6305b38b018ed9dfc2516dc795319d7c45fcd6e38b27b62618c22768a.json  query-58d27ccce3b0b752904f204eb0bf5d6cd302f3319ddcf2671e53f8b69c5a108b.json  query-5ba0acfd62b4a983e8c709cec7914a53e3b122f55c931732802829935640c4b0.json  query-5beaae44046f41b2649d863cf72d34f4569bcc0e3809b365b76e148c9a312af6.json  query-5e70ae9262cee92073608e5f80f421de5ce78baa2af8a86ef7b7c82de881dd19.json  (+75 more)
archive/: delegation-playbook.md  e2e-research.md  ui-audit-2026-03-18.md
archive/phases/: phase-1-brief.md  phase-2-brief.md  phase-3-brief.md  phase-4-brief.md  phase-5-brief.md
archive/research/awesome-leptos/: index.md
archive/spec/: E2E Test Blueprint.md  Implementation Plan.md  Technical Research Brief.md  component-system.md  i18n-implementation-plan.md  ui-fix-plan.md
end2end/: README.md  package-lock.json  package.json  playwright.config.ts  precompress-and-test.sh
end2end/tests/: epic1_join.spec.ts  epic2_season.spec.ts  epic3_assign.spec.ts  epic4_manage.spec.ts  epic5_sms.spec.ts  epic6_account.spec.ts  mail_club.spec.ts  visual-audit-cohort.spec.ts  visual-audit.spec.ts
end2end/tests/fixtures/: cached-context.ts  capture-constants.ts  cohort-seed.sql  mail_club_page.ts
guidance/: component-evaluation-framework.md  debugging-policy.md  design-system.md  dev-protocol.md  frontend-protocol.md  ui-review-prompt.md
locales/: uk.json
migrations/: 20260314000001_create_types.sql  20260314000002_create_tables.sql  20260314000003_create_invite_codes.sql  20260624000001_sms_idempotency.sql  20260712000001_add_missing_indexes.sql
ops/: delegation-playbook.md  e2e-research.md  leptos-idioms.md  phase-2-e2e-brief.md  phase-3-brief.md  phase-4-brief.md  phase-5-brief.md  phase-6-brief.md
orchestration_log/reference/: codebase_state.md  conventions.md  deferred_items.md  implementation_plan.md
orchestration_log/upstream-feedback/: agentic-delegation-recycling-and-context.md
public/: manifest.json
research/: README.md  brand-guidelines.md  css-patterns.md  font-system.md  landing-page-analysis.md  logo-system.md  tailwind-setup.md
scripts/: isolated-capture.sh
seed/: test_admin.sql
spec/: Architecture.md  Implementation Plan.md  Introduction.md  Personas.md  implementation-plan.md  ui-audit-sequential.md  ui-audit.md
spec/product/: Product Spec.md
spec/technical/: Architecture.md  Data Model.md  User Stories.md  i18n-migration.md
src/: app.rs  assignment.rs  auth.rs  config.rs  date_format.rs  db.rs  error.rs  hooks.rs  i18n.rs  invite_codes.rs  lib.rs  main.rs  pages.rs  phone.rs  sms.rs  types.rs
src/admin/: assignments.rs  dashboard.rs  db_helpers.rs  invite_codes.rs  mod.rs  nav.rs  page.rs  participants.rs  season.rs  sms.rs  state.rs
src/components/: mod.rs  skeleton.rs  stepper.rs  toast.rs
src/pages/: home.rs  login.rs  onboarding.rs
style/: components.css  main.css  tailwind.css  tokens.css
(+52 files in other folders)
